release-4.0.4/doc/1. Change log.md
# Seal.Net til .net 4.5

## Seal.Net Verson 1.0.0.0 (4-4-2013)

### Bugs

### Features

## Seal.Net Verson 1.0.0.1 (29-4-2013)

### Bugs

* NET35 compilerflag sat i projektfilen

### Features

## Seal.Net Verson 1.0.0.2 (18-9-2013)

### Bugs

### Features

* SosiGatewayEndpointBehavior added (18/9/2013)

## Seal.Net Verson 3.0.0 (1-2-2017)

### Bugs

### Features

* .net version 3.5 removed
* Added unittests and integration tests
* [SDS-960] Seal.NET som nuget pakke

## Seal.Net Version 4.0.0 (24-7-2017)

## Bugs

## Features

* Create OIOSAMLFactory
* Create SOSIFactory
* STS Certificate Validation
* STS Certificate Blacklist Check
* Configuration to turn Certificate Check on/off
* Generic Credential Vault to resolve system certificates
* Updated to .Net 4.6.2
* Introduced classes IDCard, SystemIDCard & UserIDCard